--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "@uniswap/v3-periphery": "^1.4.4",
     "dotenv": "^16.5.0",
-    "inquirer": "^12.6.3"
+    "inquirer": "^12.6.3",
+    "three": "^0.177.0"
   }
 }
