--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@openzeppelin/contracts": "^5.3.0",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
+    "@types/extract-zip": "^2.0.0",
+    "@types/fs-extra": "^11.0.4",
     "@uniswap/v3-periphery": "^1.4.4",
     "dotenv": "^16.5.0",
+    "extract-zip": "^2.0.1",
+    "fs-extra": "^11.3.0",
     "inquirer": "^12.6.3",
+    "playwright": "^1.53.1",
     "three": "^0.177.0"
   }
 }
