--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
+# First Published by JustineDevs
+
 # Testnet Automation Bot Environment Variables
 # Copy this file to .env and fill in your values
 
