--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
+    "@prisma/client": "^6.10.1",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
+    "@splinetool/react-spline": "^4.0.0",
+    "@supabase/ssr": "^0.6.1",
     "@types/extract-zip": "^2.0.0",
     "@types/fs-extra": "^11.0.4",
     "@uniswap/v3-periphery": "^1.4.4",
     "dotenv": "^16.5.0",
+    "ethers": "^6.14.4",
     "extract-zip": "^2.0.1",
     "fs-extra": "^11.3.0",
+    "https-proxy-agent": "^7.0.6",
     "inquirer": "^12.6.3",
     "playwright": "^1.53.1",
-    "three": "^0.177.0"
+    "puppeteer": "^24.11.2",
+    "react-icons": "^5.5.0",
+    "three": "^0.177.0",
+    "typescript": "^5.8.3",
+    "winston": "^3.17.0"
   }
 }
