Remove private keys from env.example and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ vars.json*
 /web
 /unanecessary*
 
+# Environment files with real private keys (create .env for your real keys)
+.env
+.env.local
+.env.production
+
 # Hardhat files
 /cache
 /artifacts
